--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/sass-loader": "^8.0.2",
     "core-js": "^3.6.5",
+    "sass": "^1.35.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
