Update package name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "prefect-design-library",
+  "name": "@prefect/miter-design",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host localhost",
     "build": "vue-cli-service build",
-    "build:bundle": "vue-cli-service build --target lib --name prefect-design-library ./src/components/index.ts",
+    "build:bundle": "vue-cli-service build --target lib --name miter-design ./src/components/index.ts",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
