--- a/package.json
+++ b/package.json
@@ -2,25 +2,40 @@
   "name": "@prefect/miter-design",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/miter-design.ssr.js",
+  "browser": "dist/miter-design.esm.js",
+  "module": "dist/miter-design.esm.js",
+  "unpkg": "dist/miter-design.min.js",
+  "types": "miter-design.d.ts",
+  "files": [
+    "dist/*",
+    "miter-design.d.ts",
+    "src/**/*.vue"
+  ],
+  "sideEffects": false,
   "scripts": {
     "serve": "vue-cli-service serve --host localhost src/demo/main.ts",
-    "build": "vue-cli-service build",
-    "build:bundle": "vue-cli-service build --target lib --name miter-design ./src/entry.ts",
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {
-    "@types/sass-loader": "^8.0.2",
-    "core-js": "^3.6.5",
-    "sass": "^1.35.2",
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
-    "vue-property-decorator": "^9.1.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-replace": "^2.3.4",
     "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
@@ -30,12 +45,29 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^8.0.0",
     "prettier": "^2.2.1",
+    "rollup": "^2.53.1",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-vue": "^6.0.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0"
+    "vue-jest": "^5.0.0-0",
+    "vue-sfc-rollup": "^4.0.5",
+    "@types/sass-loader": "^8.0.2",
+    "core-js": "^3.6.5",
+    "sass": "^1.35.2",
+    "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.5"
   }
 }
