Import fonts in main scss file

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "sideEffects": false,
   "scripts": {
     "serve": "vue-cli-service serve --host localhost src/demo/main.ts",
+    "dev": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --watch",
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
