Replace webpack with vite, remove corresponding packages, update build, remove rollup (vite wraps this already)

--- a/package.json
+++ b/package.json
@@ -2,24 +2,17 @@
   "name": "@prefect/miter-design",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/miter-design.ssr.js",
-  "browser": "dist/miter-design.esm.js",
-  "module": "dist/miter-design.esm.js",
-  "unpkg": "dist/miter-design.min.js",
-  "types": "miter-design.d.ts",
-  "files": [
-    "dist/*",
-    "miter-design.d.ts",
-    "src/**/*.vue"
-  ],
   "sideEffects": false,
+  "main": "./dist/miter-design.umd.js",
+  "module": "./dist/miter-design.es.js",
+  "style": "./dist/style.css",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
-    "serve": "vue-cli-service serve --host localhost src/demo/main.ts",
-    "dev": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --watch",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife",
+    "serve": "vite",
+    "dev": "vite build --watch",
+    "build": "vite build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -29,44 +22,35 @@
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-replace": "^2.3.4",
     "@types/jest": "^24.0.19",
+    "@types/sass-loader": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@vitejs/plugin-vue": "^1.2.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^8.0.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.53.1",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-vue": "^6.0.0",
+    "sass": "^1.35.2",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-jest": "^5.0.0-0",
-    "vue-sfc-rollup": "^4.0.5",
-    "@types/sass-loader": "^8.0.2",
-    "core-js": "^3.6.5",
-    "sass": "^1.35.2",
+    "vite": "^2.4.2",
+    "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-0",
-    "vue-property-decorator": "^9.1.2"
+    "vue-jest": "^5.0.0-0",
+    "vue-property-decorator": "^9.1.2",
+    "vue-sfc-rollup": "^4.0.5"
   },
   "peerDependencies": {
     "vue": "^3.0.5"
