--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
+      "vite/client",
       "webpack-env",
       "jest"
     ],
