--- a/package.json
+++ b/package.json
@@ -40,17 +40,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "postcss": "^8.0.0",
     "prettier": "^2.2.1",
     "sass": "^1.35.2",
-    "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
     "vite": "^2.4.2",
     "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-0",
     "vue-jest": "^5.0.0-0",
-    "vue-property-decorator": "^9.1.2",
-    "vue-sfc-rollup": "^4.0.5"
+    "vue-property-decorator": "^9.1.2"
   },
   "peerDependencies": {
     "vue": "^3.0.5"
