--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "types": [
       "vite/client",
       "webpack-env",
-      "jest"
+      // "!jest/types"
     ],
     "paths": {
       "@/*": [
@@ -36,7 +36,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/components/Card/Actions/Actions.spec.js"  ],
   "exclude": [
     "node_modules"
   ]
