--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
   "files": [
     "dist/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^24.0.19",
     "@types/sass-loader": "^8.0.2",
@@ -29,11 +26,12 @@
     "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
     "@vue/cli-plugin-typescript": "^5.0.0-beta.2",
     "@vue/cli-plugin-unit-jest": "^5.0.0-beta.2",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-service": "^5.0.0-beta.2",
+    "@vue/compiler-sfc": "^3.1.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.10",
+    "babel-core": "~7.0.0-bridge.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.3",
     "eslint": "^7.20.0",
@@ -42,11 +40,12 @@
     "prettier": "^2.2.1",
     "sass": "^1.35.2",
     "ts-jest": "^26.5.3",
-    "typescript": "~4.1.5",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.1.6",
     "vite": "^2.4.2",
     "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-0",
-    "vue-jest": "^5.0.0-0",
+    "vue-loader": "^16.2.0",
     "vue-property-decorator": "^9.1.2"
   },
   "peerDependencies": {
