--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html-webpack-plugin": ">=5.0.0",
     "prettier": "^2.2.1",
     "sass": "^1.35.2",
+    "storybook-addon-designs": "^6.0.1",
     "storybook-builder-vite": "^0.0.12",
     "ts-jest": "^26.5.3",
     "ts-node": "^10.1.0",
