--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-typescript": "^7.12.7",
-    "@storybook/addon-a11y": "^6.3.7",
-    "@storybook/addon-actions": "^6.3.6",
-    "@storybook/addon-docs": "^6.3.6",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/theming": "^6.3.7",
-    "@storybook/vue3": "^6.3.6",
+    "@storybook/addon-a11y": "^6.4.0-alpha.31",
+    "@storybook/addon-actions": "^6.4.0-alpha.31",
+    "@storybook/addon-docs": "^6.4.0-alpha.31",
+    "@storybook/addon-essentials": "^6.4.0-alpha.31",
+    "@storybook/addon-links": "^6.4.0-alpha.31",
+    "@storybook/builder-webpack5": "^6.4.0-alpha.31",
+    "@storybook/manager-webpack5": "^6.4.0-alpha.31",
+    "@storybook/theming": "^6.4.0-alpha.31",
+    "@storybook/vue3": "^6.4.0-alpha.31",
     "@types/jest": "^24.0.19",
     "@types/sass-loader": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -48,11 +50,12 @@
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
-    "html-webpack-plugin": ">=5.0.0",
+    "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.2.1",
     "sass": "^1.35.2",
     "storybook-addon-designs": "^6.0.1",
     "storybook-builder-vite": "^0.0.12",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^26.5.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.1.6",
