--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "declarationMap": true,
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
