--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "typeRoots": ["src/*"],
     "types": [
       "vite/client",
       "webpack-env",
@@ -28,12 +29,15 @@
     },
     "lib": [
       "esnext",
+      "es6",
+      "es2016",
       "dom",
       "dom.iterable",
       "scripthost"
     ]
   },
   "include": [
+    "src/**/*.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
