--- a/package.json
+++ b/package.json
@@ -14,14 +14,28 @@
   },
   "main": "./dist/miter-design.umd.js",
   "module": "./dist/miter-design.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/miter-design.es.js",
+      "require": "./dist/miter-design.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css",
+    "./src/styles/*": "./src/styles/*"
+  },
   "files": [
-    "dist/*",
-    "src/**/*.vue"
+    "src",
+    "dist"
   ],
-  "types": "./dist/entry.d.ts",
+  "types": "./src/types/index.d.ts",
+  "dependencies": {
+    "vue": "^3.0.5"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-typescript": "^7.12.7",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-a11y": "^6.4.0-alpha.31",
     "@storybook/addon-actions": "^6.4.0-alpha.31",
     "@storybook/addon-docs": "^6.4.0-alpha.31",
@@ -62,15 +76,12 @@
     "ts-jest": "^26.5.3",
     "ts-node": "^10.1.0",
     "typescript": "^4.1.6",
-    "vite": "^2.4.2",
+    "vite": "^2.5.10",
     "vue": "^3.0.5",
     "vue-class-component": "^8.0.0-0",
     "vue-loader": "^16.5.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.10"
-  },
-  "peerDependencies": {
-    "vue": "^3.0.5"
   },
   "sideEffects": false,
   "style": "./dist/style.css"
