Update the npm organization

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@prefect/miter-design",
+  "name": "@prefecthq/miter-design",
   "version": "0.1.0",
   "private": false,
   "scripts": {
