--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: Install Modules
+        run: npm install
       - name: Run Tests
-      - run: npm install
-      - run: npm run test:unit
+        run: npm run test:unit
