--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,11 @@ jobs:
           
       - name: Install dependencies
         run: npm ci install
+        
       - name: Build components
         run: npm run build
-      - name: Publish to NPM 
-        run: npm publish
+
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          access: public
