--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prefecthq/miter-design",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "private": false,
   "scripts": {
     "serve": "vite",
@@ -27,9 +27,6 @@
     "dist"
   ],
   "types": "./src/types/index.d.ts",
-  "dependencies": {
-    "vue": "^3.0.5"
-  },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-typescript": "^7.12.7",
@@ -82,6 +79,9 @@
     "vue-loader": "^16.5.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.10"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.5"
   },
   "sideEffects": false,
   "style": "./dist/style.css"
